# opencmbcv

./: CMakeLists.txt
cmake_modules/: UsePythonTest.cmake
cppsrc/: CMakeLists.txt  geom2D.cpp
cppsrc/include/: geom2d.hpp  geom3d.hpp  measure.hpp
cppsrc/tests/: CMakeLists.txt  TestPoint2.cpp
doc/: TestPlan.txt
pysrc/: CMakeLists.txt  generate_bp_source.py.in
pysrc/examples/: icon_qt.py  show_image_qt.py
pysrc/generated_code/: opencmbcv.pypp.cpp
pysrc/generated_code/indexing_suite/: set.hpp
pysrc/include/: cmbcv_indexing_helpers.hpp
pysrc/tests/: CMakeLists.txt  test_point2.py  test_point2d.py
trunk/cmake_modules/: UsePythonTest.cmake
trunk/cppsrc/: CMakeLists.txt  geom2D.cpp
trunk/cppsrc/include/: geom2d.hpp  measure.hpp
trunk/cppsrc/tests/: CMakeLists.txt  TestPoint2.cpp  TestPoint2D.cpp
trunk/doc/: Building.txt  TestPlan.txt
trunk/pysrc/: CMakeLists.txt  generate_bp_source.py  generate_bp_source.py.in  setup.py  setup.py.in
trunk/pysrc/examples/: hello_qt.py
trunk/pysrc/generated_code/: opencmbcv.pypp.cpp
trunk/pysrc/generated_code/indexing_suite/: map.hpp  multimap.hpp
trunk/pysrc/include/: cmbcv_indexing_helpers.hpp  wrap_opencmbcv.hpp
trunk/pysrc/tests/: test_point2.py  test_point2d.py
